manifest/prod/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gpmt-api
    namespace: "default"
spec:
    selector:
        matchLabels:
            app: gpmt-api
    template:
        metadata:
            labels:
                app: gpmt-api
        spec:
            containers:
            - name: gpmt-api
              image: gpmtcontainerregistry.azurecr.io/gpmt-api:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 80
            imagePullSecrets:
            - name: "registry-token"
