manifest/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: gpmt-api-ingress
    namespace: "default"
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/use-regex: "true"
        cert-manager.io/issuer: "letsencrypt"
spec:
    tls:
    - hosts: 
        - api-gpmt.northeurope.cloudapp.azure.com
      secretName: tls-secret
    rules:
    - host: api-gpmt.northeurope.cloudapp.azure.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
                name: gpmt-api
                port:
                    number: 80
